--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 body {
   font-family: "DM sans";
 }
+/* Menu */
+.ant-menu-item-selected {
+  color: black !important;
+  background-color: rgba(128, 128, 128, 0.179) !important;
+}
